JEAP-6870: Fix Sonar findings.